2002-04-27  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in (AC_CONFIG_FILES): Add libcruft/daspk/Makefile to
	the list.

2002-04-24  Kurt Hornik <hornik@ci.tuwien.ac.at>

	* aclocal.m4 (OCTAVE_CC_FLAG, OCTAVE_CXX_FLAG): Also handle flags
	that contain : and =.

2002-04-12  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* config.guess, config.sub: Update from FSF sources.

2002-04-11  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Declare F2C and F2CFLAGS with AC_ARG_VAR.
	Delete AC_SUBST calls for F77, FFLAGS, FLIBS, F2C, F2CFLAGS (no
	need to do this explicitly now).

2002-04-04  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makeconf.in: Set and substitute EXEEXT, not EXE.

	* configure.in (EXE): Delete check and substitution.
	* install-octave.in: Use EXEEXT instead of EXE.

	* configure.in: Use AC_CHECK_MEMBERS, not OCTAVE_STRUCT_GR_PASSWD.
	Use AC_CHECK_TYPES, not AC_CHECK_TYPE or OCTAVE_CHECK_TYPE.
	* aclocal.m4 (OCTAVE_STRUCT_GR_PASSWD, OCTAVE_CHECK_TYPE): Delete.
	* acconfig.h (dev_t, ino_t, nlink_t, sigset_t): Typedef if not found.

2002-04-03  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* aclocal.m4: Replace AC_LANG_SAVE, AC_LANG_C, AC_LANG_CPLUSPLUS,
	and AC_LANG_RESTORE with AC_LANG_PUSH and AC_LANG_POP.
	Use AS_MESSAGE_LOG_FD instead of AC_FD_CC.
	* configure.in: Delete second arg in AC_CHECK_SIZEOF calls.

2002-04-03  Steven G. Johnson <stevenj@alum.mit.edu>

	* configure.in: Correct usage of AC_ARG_WITH for --with-fftw.

	* configure.in: Update for autoconf 2.5x.
	Minor syntax changes to new recommended syntaxes and macros.
	Apply changes from autoupdate plus eliminate some warning
	messages, deprecated uses of changequote, etc.
	Use autoheader templates to generate config.h.in.
	Replace most of Octave's Fortran support macros with those in the
	new autoconf.
	Eliminate most uses of internal (undocumented) autoconf cache vars.
	Replace BLAS/LAPACK detection new macros ACX_BLAS/ACX_LAPACK from
	the autoconf macro repository.