@@ -22,7 +22,7 @@ dnl Copyright (C) 1996, 1997 John W. Eaton
 ### 02111-1307, USA. 
 
 AC_INIT
-AC_REVISION($Revision: 1.357 $)
+AC_REVISION($Revision: 1.358 $)
 AC_PREREQ(2.52)
 AC_CONFIG_SRCDIR([src/octave.cc])
 AC_CONFIG_HEADER(config.h)
@@ -31,9 +31,9 @@ AC_DEFINE(OCTAVE_SOURCE, 1, [Define if this is Octave.])
   
 OCTAVE_HOST_TYPE
 
-AC_ISC_POSIX
-AC_MINIX
 AC_AIX
+AC_MINIX
+AC_ISC_POSIX
 
 ### some defaults
 
@@ -1180,6 +1180,53 @@ fi
 if test "x$PLPLOT_DIR" = xplplot; then
 	AC_CONFIG_SUBDIRS(plplot)
 fi
+
+### Some things to add to the bottom of config.h.
+
+AH_BOTTOM([
+#if defined (__GNUC__)
+#define GCC_ATTR_NORETURN __attribute__ ((__noreturn__))
+#define GCC_ATTR_UNUSED __attribute__ ((__unused__))
+#else
+#define GCC_ATTR_NORETURN
+#define GCC_ATTR_UNUSED
+#endif
+
+#define CONST_CAST(T, E) (T) (E)
+
+#define DYNAMIC_CAST(T, E) (T) (E)
+
+#define REINTERPRET_CAST(T, E) (T) (E)
+
+#define STATIC_CAST(T, E) (T) (E)
+
+#define X_CAST(T, E) (T) (E)
+
+#define HEAVYWEIGHT_INDEXING 1
+
+#define WITH_KPATHSEARCH 1
+
+#if defined(HAVE_F2C) && !defined(F77_FUNC)
+#  define F77_FUNC(x,X) x ## _
+#  define F77_FUNC_(x,X) x ## __
+#endif
+
+#if !defined(HAVE_DEV_T)
+typedef dev_t short
+#endif
+
+#if !defined(HAVE_INO_T)
+typedef ino_t unsigned long
+#endif
+
+#if !defined(HAVE_NLINK_T)
+typedef nlink_t short
+#endif
+
+#if !defined(HAVE_SIGSET_T)
+typedef sigset_t int
+#endif
+])
 
 ### Do the substitutions in all the Makefiles.
 
