@@ -2,6 +2,7 @@ dnl Process this file with autoconf to produce a configure script.
 AC_INIT
 AC_CONFIG_SRCDIR([fnmatch.c])		dnl A distinctive file to look for in srcdir.
 AC_PREREQ(2.52)			dnl Minimum Autoconf version required.
+AC_CONFIG_HEADER(config.h)
 AC_PROG_CC
 AC_CHECK_PROG(AR, ar, ar, ar)
 AC_PROG_RANLIB
