@@ -1,3 +1,7 @@
+2002-05-01  John W. Eaton  <jwe@bevo.che.wisc.edu>
+
+	* configure.in: Add AC_CONFIG_HEADERS.
+
 2002-04-03  Steven G. Johnson <stevenj@alum.mit.edu>
 
 	* configure.in: Update for autoconf 2.5x.
